Fix pmd problems